<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:id="@+id/currency_options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <CheckBox
            android:id="@+id/checkbox_euro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_check_box_euro"
            android:maxWidth="300dp"
            style="@style/CheckBox"
            tools:ignore="VisualLintButtonSize,VisualLintSystemUi" />

        <CheckBox
            android:id="@+id/checkbox_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_check_box_dollar"
            android:maxWidth="300dp"
            style="@style/CheckBox"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <CheckBox
            android:id="@+id/checkbox_pound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_check_box_pound"
            android:maxWidth="300dp"
            style="@style/CheckBox"
            tools:ignore="HardcodedText,VisualLintButtonSize" />

        <TextView
            android:id="@+id/edit_text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/currency_text_error"
            android:scrollHorizontally="false"
            android:visibility="gone"
            style="@style/BodyTextView" />

        <LinearLayout
            android:id="@+id/custom_currency_input_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currency_check_box_custom"
                android:maxWidth="300dp"
                style="@style/CheckBox"
                tools:ignore="HardcodedText,VisualLintButtonSize" />

            <EditText
                android:id="@+id/input_custom_currency"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:hint="@string/currency_check_box_edit_description"
                android:autofillHints="none"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>