<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_general"
            android:layout_marginBottom="5dp"
            style="@style/MainTitleTextView"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/theme_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/settings_general_theme"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/theme_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/language_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/settings_general_language"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/language_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/notifications_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/settings_general_notifications"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/notifications_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_general_notifications_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_finance"
            android:layout_marginBottom="5dp"
            style="@style/MainTitleTextView"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/currency_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/currency_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_finance_currency"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/currency_service_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_finance_currency_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/costs_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/costs_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_finance_costs"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/costs_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_finance_costs_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_data"
            android:layout_marginBottom="5dp"
            style="@style/MainTitleTextView"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/backup_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_data_backup"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_data_backup_text"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/restore_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_data_restore"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_data_restore_text"
                        style="@style/BodyTextView"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_about"
            android:layout_marginBottom="5dp"
            style="@style/MainTitleTextView"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/about_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/website_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about_website"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/website_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about_website_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/changelog_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about_changelog"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_about_changelog_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_support"
            android:layout_marginBottom="5dp"
            style="@style/MainTitleTextView"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <LinearLayout
                    android:id="@+id/translate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_support_translations"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_support_translations_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/privacy_policy_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:minHeight="55dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_support_privacy_policy"
                        android:layout_marginBottom="2dp"
                        style="@style/SubtitleTextView"/>

                    <TextView
                        android:id="@+id/privacy_policy_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_support_privacy_policy_description"
                        style="@style/BodyTextView"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>