<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="VisualLintSystemUi">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_cost_periods"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/text_start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_from"
            style="@style/BodyTextView" />

        <EditText
            android:id="@+id/input_start_date"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/calculator_start_date"
            android:autofillHints="@string/calculator_start_date"
            android:inputType="date"
            android:layout_marginHorizontal="8dp"
            style="@style/EditText"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/text_end_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator_to"
            android:layout_marginEnd="8dp"
            style="@style/BodyTextView" />

        <EditText
            android:id="@+id/input_end_date"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/calculator_end_date"
            android:autofillHints="@string/calculator_end_date"
            android:inputType="date"
            style="@style/EditText"
            tools:ignore="VisualLintTextFieldSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/costs_popup"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        style="@style/SubtitleTextView" />

    <EditText
        android:id="@+id/input_pack_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:hint="0.00"
        android:autofillHints="0.00"
        tools:ignore="HardcodedText,VisualLintTextFieldSize"
        style="@style/EditText" />

</LinearLayout>